# snakewrap-demo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/snakewrap/: pipeline_description.json  run.py
src/snakewrap/config/: containers.yaml  snakebids.yaml
src/snakewrap/workflow/: Snakefile
