[project]
name = "snakewrap"
version = "0.1.0"
description = "Snakebids x NiWrap"
authors = [
    { name = "Jason Kai", email = "21226986+kaitj@users.noreply.github.com" },
]
readme = "README.md"
requires-python = "~=3.11"
license = "MIT"
dependencies = [
    "niwrap>=0.5.0",
    "niwrap-helper>=0.1.0",
 "snakebids>=0.14.0",
]

[project.scripts]
snakewrap = "snakewrap.run:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snakewrap"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
preview = true
line-length = 120
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
    "D100", # Missing docstring in public module.
    "D101", # Missing docstring in public class.
    "D102", # Missing docstring in public method.
    "D103", # Missing docstring in public function.
    "D107", # Missing docstring in __init__.
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []
